fix: multiline label alignment

--- a/src/components/ui/Field/Field.css
+++ b/src/components/ui/Field/Field.css
@@ -2,11 +2,13 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
 }
 
 .field-label {
   display: block;
   flex: 0 0 auto;
+  margin-bottom: 4px;
 }
 
 input::-webkit-outer-spin-button,
